--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,18 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls pytest pytest-cov
 
+before_script:
+  - cd mysite
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
+
 script:
   - black --check .
   - flake8
+  - coverage run --source=mysite manage.py test
+  - coverage report
+
+
 
 after_success:
   - coveralls
